kubernetes/production/exampleapp/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exampleapp-web-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: exampleapp-web
