kubernetes/production/exampleapp/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # tls:
  # - hosts:
  #   - "exampleapp.makit.lv"
  #   secretName: exampleapp-tls
  rules:
  - host: "exampleapp.makit.lv"
    http:
      paths:
      - backend:
          serviceName: exampleapp-web-service
          servicePort: 80
